fix drodown menu not overlapping map button

--- a/website/css/common.css
+++ b/website/css/common.css
@@ -29,3 +29,7 @@ header #last-updated {
   white-space: nowrap;
   text-align: center;
 }
+
+header .dropdown-menu {
+  z-index: 1001;
+}
